Update and rename rank.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li> | 
-            <li><a class="active" href="rank.html">Rank</a></li> | 
+            <li><a class="active" href="index.html">Rank</a></li> | 
             <li><a href="stats.html">Stats</a></li>
         </ul>
     </nav>
