--- a/stats.html
+++ b/stats.html
@@ -3,8 +3,7 @@
 <head>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li> | 
-            <li><a href="rank.html">Rank</a></li> | 
+            <li><a href="index.html">Rank</a></li> | 
             <li><a class="active" href="stats.html">Stats</a></li>
         </ul>
     </nav>
