--- a/rank.html
+++ b/rank.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 </head>
 <body>
     <nav id="navbar">
         <ul class="nav-center">
         <li><a href="index.html">Home</a></li> | 
-        <li><a href="rank.html">Rank</a></li> | 
-        <li><a class="active" href="stats.html">Stats</a></li> |
+        <li><a class="active" href="rank.html">Rank</a></li> | 
+        <li><a href="stats.html">Stats</a></li> |
         <li><a href="about.html">About</a></li>
         </ul>
 
@@ -27,28 +28,31 @@
     <link rel="stylesheet" href="style.css">
     <div id="controls">
         <div>
-        <label for="typeSelect">Type:</label>
-        <select id="typeSelect">
-            <option value="">Select Type</option>
-            <option value="individual">Individual</option>
-            <option value="category">Category</option>
-        </select>
-        </div>
-        <div>
-        <label for="categorySelect" id="categoryLabel" style="display:none;">Category:</label>
+        <label for="categorySelect">Category:</label>
         <select id="categorySelect">
-            <option value="">Select Type</option>
+            <option value="total">Total</option>
             <option value="House">House</option>
             <option value="Gender">Gender</option>
             <option value="Grade">Grade</option>
         </select>
         </div>
-        <div id="backButtonContainer"></div>
+        <div>
+        <label for="metricSelect">Metric:</label>
+        <select id="metricSelect">
+            <option value="totalDistance">Total Distance</option>
+            <option value="averageDistance">Average Distance</option>
+            <option value="standardDeviation">Consistency</option>
+            <option value="maxDistance">Max Distance</option>
+            <option value="minDistance">Min Distance</option>
+            <option value="weeksAboveThreshold">Weeks Above Threshold</option>
+        </select>
+        </div>
+
+        <div><button id="updateTable">Update</button></div>
     </div>
 
-
-    <div id="statsContainer" class="stats-wrapper"></div>
+    <div id="tableContainer" class="tables-wrapper"></div>
     <script src="script.js"></script>
-    <script src="stats.js"></script>
+    <script src="rank.js"></script>
 </body>
 </html>
