Styling updates to page. Use how you see fit. Claude code assisted

--- a/index.html
+++ b/index.html
@@ -1,41 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav id="navbar">
-        <ul class="nav-center">
-        <li><a class="active" href="index.html">Home</a></li> | 
-        <li><a href="rank.html">Rank</a></li> | 
-        <li><a href="stats.html">Stats</a></li> |
-        <li><a href="about.html">About</a></li>
-        </ul>
+    <div class="app-container">
+        <aside class="sidebar">
+            <nav class="sidebar-nav">
+                <ul class="nav-links">
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="rank.html">Rank</a></li>
+                    <li><a href="stats.html">Stats</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
 
-        <div class="nav-right">
-        <select id="yearSelect">
-            <option value="2025">2025</option>
-            <option value="2024">2024</option>
-        </select>
+                <div class="sidebar-controls">
+                    <div class="control-group">
+                        <label for="yearSelect">Year:</label>
+                        <select id="yearSelect">
+                            <option value="2025">2025</option>
+                            <option value="2024">2024</option>
+                        </select>
+                    </div>
 
-        <select id="unitSelect">
-            <option value="kilometers">Kilometers</option>
-            <option value="miles">Miles</option>
-            <option value="laps">Laps</option>
-        </select>
-        </div>
-    </nav>
-    <link rel="stylesheet" href="style.css">
+                    <div class="control-group">
+                        <label for="unitSelect">Unit:</label>
+                        <select id="unitSelect">
+                            <option value="kilometers">Kilometers</option>
+                            <option value="miles">Miles</option>
+                            <option value="laps">Laps</option>
+                        </select>
+                    </div>
+                </div>
+            </nav>
+        </aside>
 
-<div class="home-wrapper">
-    <div id="homeContainer"></div>
+        <main class="main-content">
+            <div class="home-wrapper">
+                <div id="homeContainer"></div>
 
-    <div class="right-column">
-        <div id="houseContainer"></div>
-        <div id="genderContainer"></div>
-        <div id="gradeContainer"></div>
+                <div class="right-column">
+                    <div id="houseContainer"></div>
+                    <div id="genderContainer"></div>
+                    <div id="gradeContainer"></div>
+                </div>
+            </div>
+        </main>
     </div>
-</div>
     <script src="script.js"></script>
     <script src="index.js"></script>
 </body>
