--- a/rank.html
+++ b/rank.html
@@ -2,56 +2,72 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav id="navbar">
-        <ul class="nav-center">
-        <li><a href="index.html">Home</a></li> | 
-        <li><a class="active" href="rank.html">Rank</a></li> | 
-        <li><a href="stats.html">Stats</a></li> |
-        <li><a href="about.html">About</a></li>
-        </ul>
+    <div class="app-container">
+        <aside class="sidebar">
+            <nav class="sidebar-nav">
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="rank.html">Rank</a></li>
+                    <li><a href="stats.html">Stats</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
 
-        <div class="nav-right">
-        <select id="yearSelect">
-            <option value="2025">2025</option>
-            <option value="2024">2024</option>
-        </select>
+                <div class="sidebar-controls">
+                    <div class="control-group">
+                        <label for="yearSelect">Year:</label>
+                        <select id="yearSelect">
+                            <option value="2025">2025</option>
+                            <option value="2024">2024</option>
+                        </select>
+                    </div>
 
-        <select id="unitSelect">
-            <option value="kilometers">Kilometers</option>
-            <option value="miles">Miles</option>
-            <option value="laps">Laps</option>
-        </select>
-        </div>
-    </nav>
-    <link rel="stylesheet" href="style.css">
-    <div id="controls">
-        <div>
-        <label for="categorySelect">Category:</label>
-        <select id="categorySelect">
-            <option value="total">Total</option>
-            <option value="House">House</option>
-            <option value="Gender">Gender</option>
-            <option value="Grade">Grade</option>
-        </select>
-        </div>
-        <div>
-        <label for="metricSelect">Metric:</label>
-        <select id="metricSelect">
-            <option value="totalDistance">Total Distance</option>
-            <option value="averageDistance">Average Distance</option>
-            <option value="standardDeviation">Consistency</option>
-            <option value="maxDistance">Max Distance</option>
-            <option value="minDistance">Min Distance</option>
-            <option value="weeksAboveThreshold">Weeks Above Threshold</option>
-        </select>
-        </div>
+                    <div class="control-group">
+                        <label for="unitSelect">Unit:</label>
+                        <select id="unitSelect">
+                            <option value="kilometers">Kilometers</option>
+                            <option value="miles">Miles</option>
+                            <option value="laps">Laps</option>
+                        </select>
+                    </div>
 
-        <div><button id="updateTable">Update</button></div>
+                </div>
+            </nav>
+        </aside>
+
+        <main class="main-content">
+            <div class="sorting-controls">
+                <div class="control-group">
+                    <label for="categorySelect">Category:</label>
+                    <select id="categorySelect">
+                        <option value="total">Total</option>
+                        <option value="House">House</option>
+                        <option value="Gender">Gender</option>
+                        <option value="Grade">Grade</option>
+                    </select>
+                </div>
+
+                <div class="control-group">
+                    <label for="metricSelect">Metric:</label>
+                    <select id="metricSelect">
+                        <option value="totalDistance">Total Distance</option>
+                        <option value="averageDistance">Average Distance</option>
+                        <option value="standardDeviation">Consistency</option>
+                        <option value="maxDistance">Max Distance</option>
+                        <option value="minDistance">Min Distance</option>
+                        <option value="weeksAboveThreshold">Weeks Above Threshold</option>
+                    </select>
+                </div>
+
+                <div class="control-group">
+                    <button id="updateTable">Update</button>
+                </div>
+            </div>
+            <div id="tableContainer" class="tables-wrapper"></div>
+        </main>
     </div>
-
-    <div id="tableContainer" class="tables-wrapper"></div>
     <script src="script.js"></script>
     <script src="rank.js"></script>
 </body>
