--- a/rank.html
+++ b/rank.html
@@ -29,7 +29,7 @@
     </nav>
     <div id="controls">
         <div>
-        <label for="categorySelect">Category:</label>
+        <label for="categorySelect"></label>
         <select id="categorySelect">
             <option value="total">Total</option>
             <option value="House">House</option>
@@ -38,7 +38,7 @@
         </select>
         </div>
         <div>
-        <label for="metricSelect">Metric:</label>
+        <label for="metricSelect"></label>
         <select id="metricSelect">
             <option value="totalDistance">Total Distance</option>
             <option value="averageDistance">Average Distance</option>
@@ -52,10 +52,8 @@
 
     <div id="dashboardContainer">
         <div id="tableContainer">
-            <!-- Your table will be here -->
         </div>
         <div id="rankedChartsContainer">
-            <!-- Your charts will be rendered here -->
         </div>
     </div>
     <script src="script.js"></script>
