--- a/stats.html
+++ b/stats.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <nav id="navbar">
@@ -31,7 +32,6 @@
         <div>
         <label for="typeSelect">Type:</label>
         <select id="typeSelect">
-            <option value="">Select Type</option>
             <option value="individual">Individual</option>
             <option value="category">Category</option>
         </select>
@@ -39,7 +39,6 @@
         <div>
         <label for="categorySelect" id="categoryLabel" style="display:none;">Category:</label>
         <select id="categorySelect">
-            <option value="">Select Type</option>
             <option value="House">House</option>
             <option value="Gender">Gender</option>
             <option value="Grade">Grade</option>
