--- a/rank.html
+++ b/rank.html
@@ -51,6 +51,8 @@
     </div>
 
     <div id="dashboardContainer">
+        <div id="rankedCategoryContainer">
+        </div>
         <div id="tableContainer">
         </div>
         <div id="rankedChartsContainer">
